--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
     font-family: "Dongle", sans-serif;
   }
   main {
-    min-height: calc(100vh - 84px);
+    height: calc(100vh - 84px);
   }
 }
 
